--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,18 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Bicicletta
+email: DEGoodmanWilson@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "/bicicletta" # the subpath of your site, e.g. /blog/
+# url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: DEGoodmanWilson
+github_username:  DEGoodmanWilson
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+highlighter: pygments
 
 collections:
   modules:
