--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,14 @@
 title: Bicicletta
 email: DEGoodmanWilson@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An open source iOS / Android interface for your electric bicycle.
 baseurl: "/bicicletta" # the subpath of your site, e.g. /blog/
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: DEGoodmanWilson
 github_username:  DEGoodmanWilson
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 
 collections:
